--- a/movies.css
+++ b/movies.css
@@ -1,11 +1,56 @@
-body {
+#page {
 	width: 1024px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+header {
+	text-align: center;
+}
+
+nav {
+	margin-top: 40px;
+	margin-bottom: 0px;
+	margin-left: -40px;
+	height:40px;
+}
+
+nav li {
+	display: inline-block;
+	float: left;
+	width: 33%;
+}
+nav li a {
+	display: block;
+	float: center;
+	width: 100%;
+	text-decoration: none;
+	text-align: center;
+}
+
+nav li a:visited {
+	color: ; 
+}
+nav li:hover {
+	background: ;
+}
+
+#inputsection {
+	text-align: center;
 }
 
 #sideinfo {
+	display: inline-block;
 	width: 200px;
 }
 
 #maininfo {
+	display: inline-block;
 	width: 800px;
+}
+
+
+
+footer {
+	text-align: center;
 }
