CSS and HTML model improvements

--- a/movies.css
+++ b/movies.css
@@ -1,3 +1,9 @@
+html { -webkit-font-smoothing: antialiased;}
+
+body {
+	background-color: #ead7aa;
+}
+
 #page {
 	width: 1024px;
 	margin-left: auto;
@@ -6,6 +12,8 @@
 
 header {
 	text-align: center;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-weight: 300;
 }
 
 nav {
@@ -13,6 +21,8 @@ nav {
 	margin-bottom: 0px;
 	margin-left: -40px;
 	height:40px;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-weight: 300;
 }
 
 nav li {
@@ -35,6 +45,16 @@ nav li:hover {
 	background: ;
 }
 
+h2 {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-weight: 300;
+}
+
+h3 {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-weight: 300;
+}
+
 #inputsection {
 	text-align: center;
 }
@@ -53,4 +73,6 @@ nav li:hover {
 
 footer {
 	text-align: center;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-weight: 300;
 }
