--- a/movies.css
+++ b/movies.css
@@ -15,6 +15,10 @@ body {
 	border-radius: 5px 5px 0 0;
 }
 
+#content {
+	padding-bottom: 30px;
+}
+
 header {
 	height: 80px;
 	text-align: center;
@@ -64,7 +68,8 @@ h2 {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 300;
 	font-size: 16pt;
-	margin-left: 20px;
+	text-align: center;
+	margin-bottom: 0px;
 }
 
 h4 {
@@ -80,12 +85,17 @@ h4 {
 .sideContent {
 	background-color: #DADADA;
 	border-radius: 5px 5px 5px 5px;
-
+	vertical-align: top;
+	min-height: 40px;
+	text-align: center;
 }
 
 .mainContent {
 	background-color: #DADADA;
 	border-radius: 5px 5px 5px 5px;
+	vertical-align: top;
+	min-height: 80px;
+	text-align: center;
 }
 
 #inputsection {
@@ -106,6 +116,24 @@ h4 {
 #maininfo {
 	display: inline-block;
 	width: 800px;
+}
+
+
+
+#criticRating {
+	display: inline-block;
+	width: 95px;
+	margin-top: -20px;
+
+}
+
+#audienceRating {
+	display: inline-block;
+	width: 95px;
+}
+
+#synopsis {
+	text-align: left;
 }
 
 input[type=text] {
