--- a/movies.css
+++ b/movies.css
@@ -75,6 +75,7 @@ h2 {
 h4 {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 300;
+	color: #000000;
 }
 
 
