--- a/movies.css
+++ b/movies.css
@@ -11,7 +11,7 @@ body {
 	width: 1024px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #FFFFFF;
+	background-image: url('Popcorn03.jpg');
 	border-radius: 5px 5px 5px 5px;
 }
 
@@ -29,6 +29,19 @@ header {
 	margin-top: -20px;
 	margin-bottom: -25px;
 	border-radius: 5px 5px 0 0;
+}
+
+header img {
+	display: inline;
+	height: 50px; 
+	width: auto;
+	margin-top: 20px;
+	margin-left: 28px;
+	margin-right: 28px; 
+}
+
+header h1 {
+	display: inline;
 }
 
 nav {
